Fix Header Spacing

--- a/app/assets/stylesheets/nav_bar/nav_bar.css
+++ b/app/assets/stylesheets/nav_bar/nav_bar.css
@@ -1,22 +1,29 @@
 .nav-bar {
-  margin: 0 auto;
   display: flex;
-  justify-content: space-around;
-
+  justify-content: space-between;
 }
 
 .logo-search {
   display: flex;
-  padding: 25px;
-  width: 550px;
+  padding: 25px 0px;
+  width: 50%;
   flex-wrap: nowrap;
+  justify-content: flex-end;
+  margin-left: 35px;
+}
+
+.icon-nav {
+  display: flex;
+  justify-content: flex-end;
+  width: 35%;
+  margin-right: 35px;
 }
 
 .logo-search h3 a {
   font-family: 'Lora', serif;
   color: #f45800;
-  font-size: 25px;
-  padding: 0px 10px;
+  font-size: 30px;
+  margin-right: 15px;
   text-decoration: none;
 }
 
@@ -24,39 +31,44 @@
   text-decoration: none;
 }
 
-.logo-search .search-bar-and-button {
-  box-sizing: border-box;
-  width: 40%;
+.search-bar-and-button {
+  display: flex;
+  width:80%;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+
 }
 
 .search-bar {
-  height: 26px;
+  height: 30px;
   font-size: 12px;
-  border: 1px solid black;
-  border-radius: 1px;
-  border-right: 0px;
+  border: 1px solid lightgray;
+  border-radius: 2px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  width: 80%;
 }
 
 .search-bar:focus {
   outline: none;
+  border: 1px solid black;
 }
 
 
 .search-bar-and-button > .search-button {
   background-color: black;
-  padding: 6px 8px;
   color: white;
-  border-radius: 3px;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 6px 14px;
   border: 0px;
+  border-radius: 2px;
+  border-bottom-left-radius: 0px;
+  border-top-left-radius: 0px;
 }
 
 .search-button:hover {
   cursor: pointer;
+  background-color: rgb(36, 36, 36);
 }
 
-
-.icon-nav {
-  display: flex;
-  justify-content: space-around;
-  width: 350px;
-}
